# calorie-tracker-engsoft

./: .editorconfig  .env-example  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
docs/: APOO Calorie Tracker.md  TODO.md  api-documentation.md  calorie_tracker.md  diagram.puml  diagrama.md  diagrama.puml  project-structure.md
docs/sprint-1/: diagrama_de_classes.md  diagrama_sprint1.md  diagrama_sprint1_mermaid.md  sprint1_resumo.md
docs/sprint-2/: sprint_2.md
src/: manage.py
src/apps/accounts/: dependencies.py  repositories.py  serializers.py  services.py  tests.py  ui_urls.py  ui_views.py  urls.py  validators.py  views.py
src/apps/accounts/templates/: base.html
src/apps/accounts/templates/accounts/: activate.html  login.html  nutritional_profile.html  password_reset_confirm.html  password_reset_request.html  password_reset_request_done.html  password_reset_success.html  profile.html  register.html  verify_email.html
src/apps/ai_engine/: dependencies.py  exceptions.py  schemas.py  services.py  ui_urls.py  urls.py  views.py
src/apps/ai_engine/clients/: base.py  gemini.py
src/apps/ai_engine/prompts/: diet_suggestion.txt  edit_diet.txt  edit_plan.txt  meal_suggestion.txt  shopping_list.txt  system.txt  weekly_planner.txt
src/apps/ai_engine/services/: ai_tools.py  context_builder.py  diet_assistant.py  meal_suggester.py  shopping_list.py
src/apps/ai_engine/templates/ai_engine/: chat.html  saved_items.html  shopping_list.html
src/apps/ai_engine/utils/: ai_tools.py  context_builder.py
src/apps/assistant/: services.py  urls.py  views.py
src/apps/assistant/templates/assistant/: chat.html  saved_items.html  shopping_list.html
src/apps/foods/: admin.py  allergens.py  dependencies.py  models.py  repositories.py  serializers.py  services.py  tests.py  ui_urls.py  ui_views.py  urls.py  views.py
src/apps/foods/management/commands/: export_food_embeddings.py  import_food_embeddings.py  import_foods.py  update_food_embeddings.py
src/apps/foods/migrations/: 0001_initial.py  0002_food_allergens_meallog.py  0003_delete_meallog.py  0004_alter_food_kcal_per_100g.py  0005_food_embedding.py  0006_alter_food_embedding.py
src/apps/foods/templates/foods/: new_food.html  tracker.html
src/apps/profiles/: admin.py  dependencies.py  models.py  repositories.py  restrictions.py  serializers.py  services.py  tests.py  ui_urls.py  ui_views.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py  0002_foodrestriction.py  0003_alter_foodrestriction_profile.py  0004_nutritionalprofile_dietary_restrictions_and_more.py  0005_alter_foodrestriction_restriction_type.py  0006_saveddiet_savedrecipe.py  0007_nutritionalprofile_remind_interval_hours_and_more.py  0008_weeklyplan.py
src/apps/profiles/templates/profiles/: nutritional_profile.html
src/apps/tracker/: dependencies.py  models.py  repositories.py  serializers.py  services.py  tasks.py  tests.py  ui_urls.py  ui_views.py  urls.py  views.py
src/apps/tracker/migrations/: 0001_initial.py
src/apps/tracker/templates/tracker/: tracker.html
src/apps/tracker/templates/tracker/partials/: dashboard.html  history.html
src/core/: asgi.py  celery.py  settings.py  urls.py
src/core/settings/: base.py  dev.py  prod.py
