[project]
name = "calorie-tracker-engsoft"
version = "0.0.1"
description = "calorie-tracker-engsoft"
authors = [
  { name = "Thallys Torres", email = "thallys.auugusto.torres@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
  "django>=5.2,<6.0",
  "psycopg[binary]>=3.2",
  "redis>=5.2",
  "celery>=5.4",
  "djangorestframework>=3.15,<3.16",
  "django-celery-results>=2.5",
  "gunicorn>=23.0",
  "python-dotenv>=1.2.2",
  "django-jazzmin>=3.0.4",
  "requests>=2.33.1",
  "openfoodfacts>=5.0.1",
  "google-genai>=1.73.1",
  "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ruff",
    "pyright",
    "pytest",
    "pytest-xdist",
    "pytest-django",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
  "ASYNC",
  "A",
  "ANN",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FIX",
  "I",
  "ICN",
  "ISC",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TD",
  "TRY",
  "UP",
  "W",
  "YTT",
  "RUF",
  "N",
]
ignore = ["T201", "COM812", "ISC001", "ANN", "Q000"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# [tool.ruff.lint.isort]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = [
  "**/venv",
  "**/env",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]

venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["src"]
DJANGO_SETTINGS_MODULE = "core.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
tqdm = { index = "pypi" }

[tool.uv]
package = false

[tool.setuptools]

package-dir = { "" = "src" }
